--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
 
 @layer components {
     .btn-primary {
-        @apply bg-primary-900 text-white hover:bg-primary-500 !important;
+        @apply bg-primary-900 text-white hover:bg-primary-500 disabled:pointer-events-none !important;
     }
     .panel {
         @apply rounded-md border border-gray-200 bg-white p-4;
